eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker_nodejs_deployment
  labels:
    app: nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: 979578978884.dkr.ecr.us-east-2.amazonaws.com/docker_nodejs_demo:22
        ports:
        - containerPort: 3000
