eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-nodejs-service
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
